# YetAnotherSLAM

./: .gitignore  CMakeLists.txt  CameraTrajectory.txt  README.md  build.sh  build_clean.sh  build_debug.sh  clean.sh  compare.md
CoreSystem/include/: CoreSystem.h  GlobalDef.h  KeyFrame.h  LoopClosing.h  MapPoint.h  ORBMatcher.h  ORBextractor.h  Tracking.h
CoreSystem/src/: CoreSystem.cpp  Frame.cpp  KeyFrame.cpp  LocalMapping.cpp  LoopClosing.cpp  MapManager.cpp  MapPoint.cpp  Optimizer.cpp  PoseSolver.cpp  Tracking.cpp  Viewer.cpp
Examples/: LiveDemo.cpp  LiveDemo.yaml  TUMDemo.cpp  asus_recorded.cpp  asus_rgbd.cpp  freiburg3.yaml
Examples/OpenNI2/: NI2.settings  NI2.yaml  NI2Live.cc  NI2Live.sh  NI2Record.cc  NI2Record.sh
Examples/TUM-RGBD/: TUM.cc  TUMFr3.settings  TUMFr3.sh  TUMFr3.yaml
FullSystem/include/: Converter.h  Frame.h  GlobalDef.h  KeyFrame.h  KeyFrameDatabase.h  LocalMapping.h  LoopClosing.h  Map.h  MapDrawer.h  MapManager.h  MapPoint.h  ORBMatcher.h  ORBVocabulary.h  ORBextractor.h  Optimizer.h  PoseSolver.h  Sim3Solver.h  System.h  Tracking.h  Viewer.h
FullSystem/src/: Bundler.cpp  Converter.cc  Converter.cpp  Frame.cpp  GlobalDef.cpp  KeyFrame.cpp  KeyFrameDatabase.cpp  LocalMapping.cpp  LoopClosing.cpp  Map.cpp  MapDrawer.cpp  MapManager.cpp  MapPoint.cpp  ORBMatcher.cpp  ORBextractor.cpp  Optimizer.cpp  PoseSolver.cpp  Sim3Solver.cpp  System.cpp  Tracking.cpp  Viewer.cpp
IOWrapper/: IOSockets.cpp  IOSockets.h  IOWrapper.h
OptBackend/include/: LocalOptimizer.h  NumType.h
OptBackend/src/: LocalOptimizer.cu
RGBDFusion/include/: CoarseTracking.h  ImageProc.h  LocalBundler.h  MappingUtils.h  MeshEngine.h  RGBDTracking.h  TrackingUtils.h  VoxelMap.h  VoxelMapping.h
RGBDFusion/src/: CoarseTracking.cpp  CoarseTracking.cu  DepthFusion.cu  ImageProc.cu  LocalBundler.cu  MeshEngine.cu  MeshScene.cu  RGBDTracking.cu  RayTraceEngine.cu  RayTracing.cu  VoxelMap.cu  VoxelMapping.cu
RGBDFusion/utils/: CudaUtils.h  ParallelScan.h  VoxelStructUtils.h  svd3.h
RGBDOdom/: CoarseTracking.cu  CoarseTracking.h  MeshEngine.cu  RayTraceEngine.cu  TrackingUtils.h
Vocabulary/: Text2Bin.cpp
config/: TUM1.yaml  TUM2.yaml  live.yaml
demo/: LiveDemo.cpp  LiveDemo.yaml  TUMDemo.cpp  TUMDemo.yaml  TUMFreiburg3.yaml  TestRun.cpp  TestRun.yaml
include/: Bundler.h  Converter.h  Frame.h  FrameShell.h  FullSystem.h  GlobalDef.h  KeyFrame.h  LocalMapper.h  LocalMapping.h  LoopClosing.h  LoopFinder.h  Map.h  MapDrawer.h  MapPoint.h  Mapping.h  Matcher.h  ORBmatcher.h  Optimizer.h  System.h  Tracking.h  Viewer.h
module/DENSE/: CMakeLists.txt
module/ONI_Camera/: OniCamera.cpp
module/ORB_SLAM2/: CMakeLists.txt
module/OniCamera/: CMakeLists.txt  OniCamera.h
script/: build.sh  clean.sh  run_live.sh  run_tum_freig3_office.sh
src/: Bundler.cpp  Frame.cpp  FullSystem.cpp  GlobalDef.cpp  KeyFrame.cpp  KeyFrameDatabase.cpp  LocalMapper.cpp  LocalMapping.cpp  LoopClosing.cpp  LoopFinder.cpp  Map.cpp  MapDrawer.cpp  MapPoint.cpp  Mapping.cpp  Matcher.cpp  ORBMatcher.cpp  ORBmatcher.cpp  Optimizer.cpp  System.cpp  Tracking.cpp  Viewer.cpp  main_live.cpp  main_tum.cpp
src/CoreSystem/: CoreSystem.cc  CoreSystem.h  Frame.cpp  Frame.h  GlobalDef.cpp  KeyFrame.cpp  KeyFrame.h  KeyFrameDatabase.cpp  KeyFrameDatabase.h  LocalMapping.h  LoopClosing.cpp  LoopClosing.h  Map.cpp  Map.h  MapDrawer.cpp  MapDrawer.h  ORBextractor.cpp  ORBextractor.h  Optimizer.h  Tracking.cpp  Tracking.h  Viewer.cpp  Viewer.h
src/DataStruct/: frame.cpp  frame.h  keyFrame.cpp  keyFrame.h  map.cpp  map.h  mapPoint.cpp  mapPoint.h
src/DenseMapper/: denseMap.cu  denseMap.h  denseMapper.cpp  denseMapper.h  depthFusion.cu  mapFunctors.h  meshScene.cu  raytracing.cu
src/DenseTracker/: cudaImageProc.cu  cudaImageProc.h  denseTracker.cu  denseTracker.h  se3StepFunctor.h
src/FullSystem/: fullSystem.cpp  fullSystem.h
src/IOSystem/: BaseOutput.h  PangolinViewer.cc  PangolinViewer.h
src/LocalMapper/: localMapper.cpp  localMapper.h  localizer.cpp  localizer.h
src/LoopCloser/: loopCloser.cpp  loopCloser.h
src/MapViewer/: mapViewer.cpp  shader.h
src/Optimizer/: Optimizer.cpp  Optimizer.h
src/RGBDOdometry/: CoarseTracking.cu  CoarseTracking.h  ImageProc.cu  ImageProc.h  MeshEngine.cu  MeshEngine.h  RayTraceEngine.cu  RayTraceEngine.h  TrackingUtils.h  VoxelMap.cu  VoxelMap.h
src/Relocalizer/: Relocalizer.h
src/_core/: Frame.cpp  Frame.h  FullSystem.cpp  FullSystem.h  KeyFrame.cpp  KeyFrame.h  KeyFrameDatabase.cpp  KeyFrameDatabase.h  LocalMapping.cpp  LocalMapping.h  LoopClosing.cpp  LoopClosing.h  Map.cpp  Map.h  MapDrawer.cpp  MapManager.cpp  MapManager.h  MapPoint.cpp  MapPoint.h  Optimizer.cpp  Optimizer.h  System.cpp  System.h  Tracking.cpp  Tracking.h  Viewer.h
src/_cuda/: CoarseTracking.cu  ImageProc.cu  MeshEngine.cu  RayTraceEngine.h  RayTracer.cu  RayTracer.h  TrackingUtils.h  TriangleTable.h  VoxelMap.cu  VoxelMap.h  VoxelStructUtils.h
src/_gui/: BaseIOWrapper.h  MapDrawer.h  PangolinViewer.cpp  PangolinViewer.h  Viewer.cpp  Viewer.h
src/_utils/: BoWDatabase.cpp  BoWDatabase.h  GlobalParams.h  GlobalSettings.cpp  GlobalSettings.h  Intrinsics.h  ORBMatcher.cpp  ORBMatcher.h  (+3 more)
test/: CMakeLists.txt  asus_dataset.sh  asus_xtion.sh  freig3_office.sh  live.sh  tum_freiburg3.sh
test/liveViewer/: liveViewer.cpp  liveViewer.cu  oniCamera.cpp  oniCamera.h
test/tumViewer/: tumLoader.h  tumViewer.cpp
test/unitTest/: simpleDrawingPangolin.cpp  testGeneralProgramming.cpp  testSophusCeresInteraction.cpp
testScripts/: freiburg3.sh  liveDemo.sh  primesense.sh
tests/: freig3_office.sh
tools/CameraOpenNI/: CMakeLists.txt
tools/CameraOpenNI/src/: CameraOpenNI.cpp
tools/DatasetLoader/: CMakeLists.txt
tools/DatasetLoader/include/: TUM_Loader.h
tools/DatasetLoader/src/: TUM_Loader.cpp
tools/RGBDTracking/: CMakeLists.txt
tools/RGBDTracking/include/: CUDAImageProc.h  CUDAUtils.h  RGBDTracking.h  se3StepFunctor.h
tools/RGBDTracking/src/: CUDAImageProc.cu  RGBDTracking.cu
utils/: GlobalSettings.cc  GlobalSettings.h  ParallelScan.h  cudaDeviceFuncs.cu  cudaDeviceFuncs.h
(+142 files in other folders)
